--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#4F46E5</color>
-    <color name="onPrimary">#FFFFFF</color>
-    <color name="surface">#F7F7FA</color>
-    <color name="onSurface">#111827</color>
-    <color name="keyBg">#FFFFFF</color>
-    <color name="keyText">#111827</color>
-    <color name="opBg">#EEF2FF</color>
-    <color name="opText">#4338CA</color>
-    <color name="dangerBg">#FEE2E2</color>
-    <color name="dangerText">#B91C1C</color>
+    <color name="white">#FFFFFF</color>
+    <color name="orange">#FF9800</color>
+    <color name="gray_bg">#E0E0E0</color>
 </resources>
